fix(03): orchestrator corrections - pheromone test data and file updates

--- a/.planning/phases/03-pheromone-communication/.continue-here.md
+++ b/.planning/phases/03-pheromone-communication/.continue-here.md
@@ -1,137 +1,93 @@
 ---
-phase: 02 - Worker Ant Castes
-task: COMPLETED (all 9 tasks)
-total_tasks: 9
-status: completed
+phase: 03-pheromone-communication
+task: READY TO BEGIN
+total_tasks: 6
+total_plans: 6
+status: ready
 last_updated: 2026-02-01
 ---
 
 <current_state>
-Phase 2: Worker Ant Castes - COMPLETED
-Session paused after completing all 9 tasks.
-
-Ready to begin Phase 3: Pheromone Communication.
+Phase 3: Pheromone Communication - READY TO BEGIN
+Planning complete. Ready to execute 6 plans in 3 waves.
 </current_state>
 
-<completed_work>
+<phase_plan>
+**Phase 3: Pheromone Communication**
 
-**Phase 1 & 2 Complete:**
+Goal: Colony coordinates through stigmergic pheromone signals with time-based decay and caste-specific sensitivity
 
-Phase 1: Colony Foundation (8/8 tasks)
-- Created all state schemas (COLONY_STATE, pheromones, worker_ants, memory)
-- Implemented file locking mechanism (.aether/utils/file-lock.sh)
-- Implemented atomic write pattern (.aether/utils/atomic-write.sh)
-- Updated /ant:init and /ant:status commands
+Plans: 6 plans in 3 waves
 
-Phase 2: Worker Ant Castes (9/9 tasks)
-- Created 6 Worker Ant caste prompts:
-  - Colonizer Ant (codebase colonization, semantic indexing)
-  - Route-setter Ant (phase planning, task breakdown)
-  - Builder Ant (code implementation, commands)
-  - Watcher Ant (validation, testing, quality)
-  - Scout Ant (research, documentation)
-  - Architect Ant (memory compression, patterns)
-- Implemented Task tool spawning pattern in all caste prompts
-- Updated /ant:phase command
-- Created /ant:build command (named as requested)
+Wave 1 (Parallel - 3 plans):
+- 03-01: Create /ant:focus command (FOCUS pheromone, 1-hour decay)
+- 03-02: Create /ant:redirect command (REDIRECT pheromone, 24-hour decay)
+- 03-03: Create /ant:feedback command (FEEDBACK pheromone, 6-hour decay)
 
-**Key Files Created/Modified:**
-- .aether/data/COLONY_STATE.json - Main colony state
-- .aether/data/pheromones.json - Pheromone signals (schema ready)
-- .aether/data/worker_ants.json - Worker Ant castes (new names)
-- .aether/data/memory.json - Triple-layer memory
-- .aether/workers/colonizer-ant.md
-- .aether/workers/route-setter-ant.md
-- .aether/workers/builder-ant.md
-- .aether/workers/watcher-ant.md
-- .aether/workers/scout-ant.md
-- .aether/workers/architect-ant.md
-- .claude/commands/ant/init.md - Updated for Aether v2
-- .claude/commands/ant/status.md - Updated with new caste names
-- .claude/commands/ant/phase.md - Updated
-- .claude/commands/ant/build.md - Created (renamed from execute)
+Wave 2 (Parallel - 2 plans, depends on Wave 1):
+- 03-04: Update Colonizer, Route-setter, Builder Ant prompts (pheromone reading)
+- 03-05: Update Watcher, Scout, Architect Ant prompts (pheromone reading)
 
-</completed_work>
+Wave 3 (Sequential - 1 plan, depends on Wave 2):
+- 03-06: Verification and human checkpoint
 
-<remaining_work>
-
-**Phase 3: Pheromone Communication** (8 tasks, 0 complete)
-
-Tasks from ROADMAP.md:
-- 03-01: Implement pheromone signal schema in pheromones.json (type, strength, created_at, decay_rate)
-- 03-02: Implement decay calculation for each pheromone type (INIT: none, FOCUS: 1h, REDIRECT: 24h, FEEDBACK: 6h)
-- 03-03: Create /ant:focus command prompt (Queen emits attract pheromone, guides colony attention)
-- 03-04: Create /ant:redirect command prompt (Queen emits repel pheromone, warns colony away)
-- 03-05: Create /ant:feedback command prompt (Queen emits guidance pheromone, shapes colony behavior)
-- 03-06: Implement caste sensitivity profiles in worker_ants.json (already in schema)
-- 03-07: Implement effective strength calculation (pheromone strength × caste sensitivity)
-- 03-08: Implement pheromone combination response logic (ants respond to signal blends)
-
-</remaining_work>
+Key Implementation Notes:
+- Schema already complete in pheromones.json (tasks 03-01, 03-02, 03-06 done)
+- Commands use bash/jq pattern from init.md (not Python)
+- Decay is interpreted by Worker Ants on-read (not calculated by code)
+- Effective strength = signal strength × caste sensitivity
+</phase_plan>
 
 <decisions_made>
 
-- **Caste Naming**: Using new descriptive names (colonizer, route_setter, builder, watcher, scout, architect) throughout
-- **Command Naming**: User requested "build" instead of "execute" for phase execution
-- **Pheromone Schema**: Already created in pheromones.json with half-life definitions
-- **Sensitivity Profiles**: Already defined in pheromones.json for all castes
+- **Prompt-Based System**: Decay and effective strength are interpreted by Worker Ants, not calculated by code
+- **init.md Pattern**: All pheromone commands follow the exact pattern from init.md (jq + atomic-write)
+- **Schema Reuse**: pheromones.json already has complete schema with decay rates and caste sensitivities
+- **Caste Sensitivities**: worker_ants.json already has sensitivity_profile for each caste
+- **No Python**: Commands are pure bash/jq implementation
 
 </decisions_made>
-
-<attempted_approaches>
-
-No failed approaches in this session. All implementations proceeded smoothly.
-
-</attempted_approaches>
-
-<dead_ends>
-
-No dead ends encountered.
-
-</dead_ends>
-
-<blockers>
-
-No blockers. Ready to proceed with Phase 3.
-
-</blockers>
 
 <context>
 
 **Aether v2 Status:**
 - Phases 1 & 2 complete (17/100 tasks)
+- Phase 3 planned and ready to execute
 - 10-phase roadmap for building colony infrastructure
-- Fixed roadmap - not creating custom phases, building predefined colony system
 
 **Current State:**
-- Colony foundation infrastructure in place
+- Colony foundation infrastructure complete
 - All Worker Ant caste prompts created with autonomous spawning
-- Ready to implement pheromone communication system
+- Pheromone schema complete (decay rates, sensitivities defined)
+- Ready to implement pheromone communication commands and Worker Ant responses
 
 **Aether Philosophy:**
-- Emergence Over Orchestration - Worker Ants spawn Worker Ants autonomously
-- Structure at boundaries, emergence within - Phase checkpoints, pure emergence during execution
-- Stigmergy - Pheromone signals as communication medium (environment holds state)
+- Stigmergy - Pheromone signals as communication medium
+- Environment holds state (pheromones.json)
+- Worker Ants interpret signals locally based on caste sensitivity
+- Queen provides intention, colony self-organizes
 
-**Next Phase Focus:**
-Phase 3 implements the pheromone communication layer - the stigmergic signaling system that enables colony coordination without central control.
+**Phase 3 Focus:**
+Implement the pheromone communication layer - the stigmergic signaling system that enables colony coordination without central control.
 
 </context>
 
 <next_action>
 
-**To continue Phase 3 after clearing context:**
+**To begin Phase 3 execution:**
 
 ```
-/cds:resume-work
+/cds:execute-phase 03
 ```
 
 This will:
-1. Load STATE.md and detect current position (Phase 2 complete, Phase 3 ready)
-2. Present status and offer to begin Phase 3
-3. Start with task 03-01: Implement pheromone signal decay calculations
+1. Execute Wave 1 plans in parallel (focus, redirect, feedback commands)
+2. Execute Wave 2 plans in parallel (Worker Ant prompt updates)
+3. Execute Wave 3 verification plan
+4. Create SUMMARY files for each completed plan
+5. Present completion status and next steps
 
-**Phase 3 first action when resuming:**
-Implement pheromone signal decay calculations in the pheromone system. The schema exists in pheromones.json but needs the actual decay calculation logic.
+**Phase 3 first action:**
+Execute plan 03-01 to create the /ant:focus command following the init.md pattern.
 
 </next_action>
