fix(08): revise plans based on checker feedback
Plan 02: Split Task 2 into smaller tasks (2a, 2b, 2c, 2d)
- Task 2a: Source Bayesian library
- Task 2b: Update record_successful_spawn
- Task 2c: Update record_failed_spawn
- Task 2d: Update getter functions

Plan 03: Add explicit integration and fix missing details
- Task 1: Added explicit source statement location (after line 23, before WORKER_ANTS_FILE)
- Task 1: Added COLONY_STATE_FILE constant for Bayesian queries
- Task 2: Added error handling for 'none|0.0' return
- Task 2: Added jq error handling (stderr to /dev/null)
- Task 2: Added output format validation (checks for '|' separator)
- Task 4: Added PRIMARY INTEGRATION POINT label
- Task 4: Enhanced validation logic (rec_caste \!= 'none', rec_confidence \!= '0.0', rec_confidence is not empty)
- Must-haves: Added 'Bayesian recommendation integrated into actual spawn decision workflow'

Issues addressed:
- requirement_coverage: META-04 and META-05 now have implementation tasks
- key_links_planned: Explicit source statement location added
- key_links_planned: Specialist recommendation integrated with spawn workflow
- task_completeness: Added missing implementation details
- scope_sanity: Plan 02 Task 2 split into 4 smaller tasks

--- a/.planning/phases/08-colony-learning/08-02-PLAN.md
+++ b/.planning/phases/08-colony-learning/08-02-PLAN.md
@@ -158,14 +158,14 @@ COLONY_STATE.json meta_learning.specialist_confidence uses new Bayesian schema w
 </task>
 
 <task type="auto">
-  <name>Task 2: Enhance spawn-outcome-tracker.sh with Bayesian updating</name>
+  <name>Task 2a: Source Bayesian library in spawn-outcome-tracker.sh</name>
   <files>.aether/utils/spawn-outcome-tracker.sh</files>
   <action>
-Enhance .aether/utils/spawn-outcome-tracker.sh to use Bayesian alpha/beta updating:
+Add source statement for bayesian-confidence.sh in .aether/utils/spawn-outcome-tracker.sh:
 
-**Changes:**
+**Location:** After file-lock.sh sourcing (around line 20-30)
 
-1. **Source bayesian-confidence.sh** (after file-lock.sh sourcing):
+**Add this code:**
 ```bash
 # Source Bayesian confidence library
 if [ -f "$AETHER_ROOT/.aether/utils/bayesian-confidence.sh" ]; then
@@ -175,12 +175,29 @@ else
 fi
 ```
 
-2. **Update record_successful_spawn()**:
-   - Get current alpha/beta (default to 1,1 if not exists)
-   - Use update_bayesian_parameters() to increment alpha
-   - Use calculate_confidence() to get new confidence
-   - Update COLONY_STATE.json with full Bayesian object
-   - Keep function signature unchanged (backward compatible)
+**IMPORTANT:**
+- Use AETHER_ROOT variable for path detection
+- Provide fallback to relative path
+- Place after existing source statements
+- Add comment explaining Bayesian integration
+  </action>
+  <verify>
+Check source statement exists:
+```bash
+grep -n "bayesian-confidence.sh" .aether/utils/spawn-outcome-tracker.sh
+# Should show source statement with AETHER_ROOT detection
+```
+  </verify>
+  <done>
+spawn-outcome-tracker.sh sources bayesian-confidence.sh with AETHER_ROOT detection and fallback.
+  </done>
+</task>
+
+<task type="auto">
+  <name>Task 2b: Update record_successful_spawn with Bayesian alpha updating</name>
+  <files>.aether/utils/spawn-outcome-tracker.sh</files>
+  <action>
+Update record_successful_spawn() in .aether/utils/spawn-outcome-tracker.sh to use Bayesian alpha incrementing:
 
 **New implementation:**
 ```bash
@@ -253,55 +270,223 @@ record_successful_spawn() {
 }
 ```
 
-3. **Update record_failed_spawn()** similarly (increment beta, not alpha)
-
-4. **Update get_specialist_confidence()**:
-   - Read confidence from Bayesian object
-   - Return confidence value (or full object if requested)
-
-5. **Update get_meta_learning_stats()**:
-   - Display alpha/beta for each specialist-task pairing
-   - Show total_spawns, successful_spawns, failed_spawns
-   - Format: "database_specialist → database: α=2, β=1, confidence=0.67, total=1, successes=1, failures=0"
-
-6. **Remove old constants** (SUCCESS_INCREMENT, FAILURE_DECREMENT):
-   - No longer needed (Bayesian updating handles asymmetry automatically)
-   - Keep DEFAULT_CONFIDENCE=0.5 (matches prior)
-   - Keep MAX/MIN confidence constants (for display/comparison only)
-
 **IMPORTANT:**
-- Keep function names and signatures unchanged (backward compatible)
-- Use bayesian-confidence.sh functions for calculations
+- Keep function signature unchanged (backward compatible)
+- Use update_bayesian_parameters() from bayesian-confidence.sh
+- Use calculate_confidence() from bayesian-confidence.sh
 - Maintain file locking and atomic write patterns
 - Update comments to explain Bayesian approach
-- Add "Enhanced with Bayesian Beta distribution" comment at top
   </action>
   <verify>
-Test enhanced functions:
+Test successful spawn increments alpha:
 ```bash
 source .aether/utils/spawn-outcome-tracker.sh
-
-# Test 1: Record successful spawn increments alpha
-record_successful_spawn "database_specialist" "database" "test_spawn_1"
-alpha=$(jq '.meta_learning.specialist_confidence.database_specialist.database.alpha' .aether/data/COLONY_STATE.json)
+record_successful_spawn "test_specialist" "test_task" "test_spawn_1"
+alpha=$(jq '.meta_learning.specialist_confidence.test_specialist.test_task.alpha' .aether/data/COLONY_STATE.json)
 # alpha should be 2 (prior 1 + 1 success)
-
-# Test 2: Record failed spawn increments beta
-record_failed_spawn "database_specialist" "database" "test_spawn_2" "Test failure"
-beta=$(jq '.meta_learning.specialist_confidence.database_specialist.database.beta' .aether/data/COLONY_STATE.json)
-# beta should be 2 (prior 1 + 1 failure)
-
-# Test 3: Confidence recalculated correctly
-confidence=$(jq '.meta_learning.specialist_confidence.database_specialist.database.confidence' .aether/data/COLONY_STATE.json)
-# confidence should match alpha/(alpha+beta)
-
-# Test 4: Get confidence returns correct value
-retrieved=$(get_specialist_confidence "database_specialist" "database")
-# should match COLONY_STATE.json confidence
 ```
   </verify>
   <done>
-spawn-outcome-tracker.sh enhanced with Bayesian alpha/beta updating. record_successful_spawn increments alpha, record_failed_spawn increments beta, confidence recalculated using Beta distribution formula. Function signatures unchanged (backward compatible). Old constants removed, new comments explain Bayesian approach.
+record_successful_spawn() increments alpha via update_bayesian_parameters(), recalculates confidence via Beta distribution formula.
+  </done>
+</task>
+
+<task type="auto">
+  <name>Task 2c: Update record_failed_spawn with Bayesian beta updating</name>
+  <files>.aether/utils/spawn-outcome-tracker.sh</files>
+  <action>
+Update record_failed_spawn() in .aether/utils/spawn-outcome-tracker.sh to use Bayesian beta incrementing:
+
+**New implementation:**
+```bash
+record_failed_spawn() {
+    local specialist_type="$1"
+    local task_type="$2"
+    local spawn_id="$3"
+    local failure_reason="$4"
+
+    # Acquire lock
+    if ! acquire_lock "$LOCK_FILE"; then
+        echo "Cannot acquire lock to record failed spawn" >&2
+        return 1
+    fi
+
+    local timestamp=$(get_timestamp)
+
+    # Get current alpha/beta (default to prior 1,1)
+    local current=$(jq -r "
+        .meta_learning.specialist_confidence.\"$specialist_type\".\"$task_type\"
+        // {\"alpha\": 1, \"beta\": 1, \"confidence\": 0.5}
+    " "$COLONY_STATE_FILE")
+
+    local alpha=$(echo "$current" | jq -r '.alpha // 1')
+    local beta=$(echo "$current" | jq -r '.beta // 1')
+
+    # Update Bayesian parameters: increment beta for failure
+    local new_alpha=$alpha
+    local new_beta=$(update_bayesian_parameters "$alpha" "$beta" "failure")
+
+    # Calculate new confidence
+    local new_confidence=$(calculate_confidence "$new_alpha" "$new_beta")
+
+    # Calculate derived stats
+    local total_spawns=$(echo "$new_alpha + $new_beta - 2" | bc)
+    local successful_spawns=$(echo "$new_alpha - 1" | bc)
+    local failed_spawns=$(echo "$new_beta - 1" | bc)
+
+    # Update state atomically with full Bayesian object
+    local updated_state
+    updated_state=$(jq "
+        .meta_learning.specialist_confidence.\"$specialist_type\".\"$task_type\" = {
+            \"alpha\": $new_alpha,
+            \"beta\": $new_beta,
+            \"confidence\": $new_confidence,
+            \"total_spawns\": $total_spawns,
+            \"successful_spawns\": $successful_spawns,
+            \"failed_spawns\": $failed_spawns,
+            \"last_updated\": \"$timestamp\"
+        } |
+        .meta_learning.spawn_outcomes += [{
+            \"spawn_id\": \"$spawn_id\",
+            \"specialist\": \"$specialist_type\",
+            \"task_type\": \"$task_type\",
+            \"outcome\": \"failure\",
+            \"reason\": \"$failure_reason\",
+            \"timestamp\": \"$timestamp\"
+        }] |
+        .meta_learning.last_updated = \"$timestamp\"
+    " "$COLONY_STATE_FILE")
+
+    if ! atomic_write "$COLONY_STATE_FILE" "$updated_state"; then
+        echo "Failed to record failed spawn" >&2
+        release_lock
+        return 1
+    fi
+
+    # Release lock
+    release_lock
+
+    return 0
+}
+```
+
+**IMPORTANT:**
+- Keep function signature unchanged (backward compatible)
+- Use update_bayesian_parameters() with "failure" outcome
+- Increment beta (not alpha) for failures
+- Include failure_reason in spawn_outcomes log
+- Maintain file locking and atomic write patterns
+  </action>
+  <verify>
+Test failed spawn increments beta:
+```bash
+source .aether/utils/spawn-outcome-tracker.sh
+record_failed_spawn "test_specialist" "test_task" "test_spawn_2" "Test failure"
+beta=$(jq '.meta_learning.specialist_confidence.test_specialist.test_task.beta' .aether/data/COLONY_STATE.json)
+# beta should be 2 (prior 1 + 1 failure)
+```
+  </verify>
+  <done>
+record_failed_spawn() increments beta via update_bayesian_parameters(), recalculates confidence via Beta distribution formula.
+  </done>
+</task>
+
+<task type="auto">
+  <name>Task 2d: Update get_specialist_confidence and get_meta_learning_stats</name>
+  <files>.aether/utils/spawn-outcome-tracker.sh</files>
+  <action>
+Update getter functions in .aether/utils/spawn-outcome-tracker.sh to work with Bayesian schema:
+
+**1. Update get_specialist_confidence():**
+```bash
+get_specialist_confidence() {
+    local specialist_type="$1"
+    local task_type="$2"
+    local full_object="${3:-false}"
+
+    local result=$(jq -r "
+        .meta_learning.specialist_confidence.\"$specialist_type\".\"$task_type\"
+        // {\"alpha\": 1, \"beta\": 1, \"confidence\": 0.5}
+    " "$COLONY_STATE_FILE")
+
+    if [ "$full_object" = "true" ]; then
+        echo "$result"
+    else
+        echo "$result" | jq -r '.confidence // 0.5'
+    fi
+}
+```
+
+**2. Update get_meta_learning_stats():**
+```bash
+get_meta_learning_stats() {
+    echo "Meta-Learning Statistics (Bayesian Beta Distribution)"
+    echo "======================================================"
+
+    jq -r '
+        .meta_learning.specialist_confidence |
+        to_entries[] |
+        .key as $specialist |
+        .value |
+        to_entries[] |
+        "\($specialist) → \(.key): α=\(.value.alpha), β=\(.value.beta), confidence=\(.value.confidence), total=\(.value.total_spawns), successes=\(.value.successful_spawns), failures=\(.value.failed_spawns)"
+    ' "$COLONY_STATE_FILE" | while IFS= read -r line; do
+        echo "  $line"
+    done
+
+    echo ""
+    echo "  Confidence formula: α / (α + β)"
+    echo "  Prior: α=1, β=1 (confidence=0.5)"
+    echo "  Success: increment α, Failure: increment β"
+}
+```
+
+**3. Remove old constants:**
+```bash
+# Remove these lines (no longer needed with Bayesian approach):
+# SUCCESS_INCREMENT=0.1
+# FAILURE_DECREMENT=0.15
+```
+
+**Keep these constants (for display/comparison):**
+```bash
+DEFAULT_CONFIDENCE=0.5
+MAX_CONFIDENCE=1.0
+MIN_CONFIDENCE=0.0
+```
+
+**4. Add comment at top of file:**
+```bash
+# Enhanced with Bayesian Beta distribution confidence scoring
+# Phase 8: Replaces simple +0.1/-0.15 arithmetic with α/(α+β) formula
+```
+
+**IMPORTANT:**
+- Keep function names and signatures unchanged (backward compatible)
+- Add optional full_object parameter to get_specialist_confidence()
+- Display alpha/beta in stats output
+- Update comments to explain Bayesian approach
+  </action>
+  <verify>
+Test getter functions:
+```bash
+source .aether/utils/spawn-outcome-tracker.sh
+
+# Test 1: Get confidence value
+retrieved=$(get_specialist_confidence "database_specialist" "database")
+# should match COLONY_STATE.json confidence
+
+# Test 2: Get full Bayesian object
+full=$(get_specialist_confidence "database_specialist" "database" "true")
+# should be JSON object with alpha, beta, confidence, etc.
+
+# Test 3: Get meta-learning stats
+get_meta_learning_stats
+# should display α, β, confidence, totals
+```
+  </verify>
+  <done>
+get_specialist_confidence() returns Bayesian confidence from state. get_meta_learning_stats() displays alpha/beta/counts. Old constants SUCCESS_INCREMENT/FAILURE_DECREMENT removed. Comments explain Bayesian approach.
   </done>
 </task>
 
