fix(40): orchestrator corrections

--- a/.planning/phases/40-state-utility-alignment/40-01-PLAN.md
+++ b/.planning/phases/40-state-utility-alignment/40-01-PLAN.md
@@ -91,9 +91,13 @@ With:
 
 Also update line 73-74 about the Pheromone System:
 - Change "Signals decay over time (exponential half-life)" to "Signals have TTL expiration (expires_at timestamp)"
+
+Also update line 78 in the Autonomy Model section:
+- Remove or replace the Bayesian reference "Bayesian confidence tracks spawn success rates per caste"
+- Replace with: "Spawn outcomes tracked per caste (success/fail counts)" to accurately reflect the simplified tracking without Bayesian terminology (per SIMP-05)
   </action>
-  <verify>grep -A8 "State File" .claude/commands/ant/ant.md</verify>
-  <done>ant.md documents single COLONY_STATE.json with nested sections, no mention of separate files</done>
+  <verify>grep -A8 "State File" .claude/commands/ant/ant.md && grep -A3 "Autonomy Model" .claude/commands/ant/ant.md</verify>
+  <done>ant.md documents single COLONY_STATE.json with nested sections, no mention of separate files, no Bayesian reference</done>
 </task>
 
 <task type="auto">
@@ -217,6 +221,12 @@ After all tasks complete:
    grep "COLONY_STATE.json.*Unified\|TTL expiration" .claude/commands/ant/ant.md
    ```
    Should find matches showing updated docs.
+
+4. No Bayesian reference:
+   ```bash
+   grep -i "bayesian" .claude/commands/ant/ant.md
+   ```
+   Should return empty (no matches).
 </verification>
 
 <success_criteria>
@@ -225,6 +235,7 @@ After all tasks complete:
 3. ant.md documents single COLONY_STATE.json structure
 4. All commands read signals from COLONY_STATE.json signals array
 5. TTL filtering (expires_at) replaces decay math in all commands
+6. No Bayesian terminology in ant.md (per SIMP-05)
 </success_criteria>
 
 <output>
