docs(v5.1): update audit - tech debt resolved

--- a/.planning/v5.1-MILESTONE-AUDIT.md
+++ b/.planning/v5.1-MILESTONE-AUDIT.md
@@ -1,23 +1,22 @@
 ---
 milestone: v5.1
 audited: 2026-02-06T22:30:00Z
-status: tech_debt
+status: passed
 scores:
   requirements: 7/7
   phases: 8/8
-  integration: 7/8
+  integration: 8/8
   flows: 4/4
 gaps:
   requirements: []
-  integration:
-    - "Dual command directories (.claude/commands/ant/ vs commands/ant/) creates confusion"
+  integration: []
   flows: []
 tech_debt:
   - phase: general
     items:
-      - "commands/ant/ contains stale pre-v5.1 versions (1103 line build.md vs 414 line)"
+      - "[RESOLVED] commands/ant/ deleted - was stale pre-v5.1 versions"
       - "runtime/aether-utils.sh (87 lines) vs .aether/aether-utils.sh (317 lines) - intentional minimal vs full"
-      - "Legacy directory cleanup recommended"
+      - "[RESOLVED] Legacy directory cleanup complete"
 ---
 
 # Milestone v5.1 Audit Report
