chore: complete v5.1 milestone
Archived:
- milestones/v5.1-ROADMAP.md (full phase details)
- milestones/v5.1-REQUIREMENTS.md (7/7 requirements shipped)
- milestones/v5.1-MILESTONE-AUDIT.md (audit report)

Deleted:
- REQUIREMENTS.md (fresh for next milestone)

Updated:
- MILESTONES.md (new v5.1 entry)
- PROJECT.md (v5.1 requirements → Validated)
- ROADMAP.md (collapsed to one-line summary)
- STATE.md (reset for next milestone)

Shipped: 8 phases, 22 plans, 75% code reduction

--- a/.planning/milestones/v5.1-REQUIREMENTS.md
+++ b/.planning/milestones/v5.1-REQUIREMENTS.md
@@ -1,8 +1,12 @@
-# Requirements: Aether v5.1 System Simplification
+# Requirements Archive: v5.1 System Simplification
 
-**Defined:** 2026-02-06
-**Core Value:** Stigmergic Emergence -- Worker Ants detect capability gaps and spawn specialists through pheromone-guided coordination
-**Source:** M4L-AnalogWave postmortem (2026-02-05)
+**Archived:** 2026-02-06
+**Status:** SHIPPED
+
+This is the archived requirements specification for v5.1.
+For current requirements, see `.planning/REQUIREMENTS.md` (created for next milestone).
+
+---
 
 ## v5.1 Requirements
 
@@ -14,11 +18,13 @@ Requirements derived from postmortem Section 5 (Recommended Fixes), ordered by s
   - Merge: COLONY_STATE, PROJECT_PLAN, pheromones, memory, errors, events
   - One read, one write per command
   - Event log as append-only strings within the file
+  - **Outcome:** Validated — 103 COLONY_STATE.json refs across 15 commands
 
 - [x] **SIMP-02**: Move state updates from end-of-command to start-of-next-command
   - /ant:build writes "EXECUTING" state only
   - /ant:continue detects completed output files and updates state
   - Prevents state loss at context boundaries
+  - **Outcome:** Validated — state survives context boundaries
 
 ### High Priority
 
@@ -27,11 +33,13 @@ Requirements derived from postmortem Section 5 (Recommended Fixes), ordered by s
   - Priority field: "high" (REDIRECT), "normal" (FOCUS), "low" (FEEDBACK)
   - Filter expired signals on read, no cleanup command needed
   - Remove all sensitivity matrices from worker specs
+  - **Outcome:** Validated — all signals use priority + expires_at
 
 - [x] **SIMP-04**: Collapse 6 worker specs into single workers.md (~200 lines)
   - Preserve role concept (colonizer, scout, builder, watcher, architect, route-setter)
   - Remove sensitivity matrices, spawning protocols, visual identity systems
   - Include assignment guidelines
+  - **Outcome:** Validated — 1,866 lines → 171 lines (91% reduction)
 
 - [x] **SIMP-05**: Shrink command files by 60-70%
   - Remove verbose display templates (let agent format naturally)
@@ -39,6 +47,7 @@ Requirements derived from postmortem Section 5 (Recommended Fixes), ordered by s
   - Remove Bayesian spawn tracking
   - Remove step-by-step progress templates
   - Target: ~100 lines average (from ~340)
+  - **Outcome:** Validated — 66% reduction in build+continue
 
 ### Medium Priority
 
@@ -47,44 +56,13 @@ Requirements derived from postmortem Section 5 (Recommended Fixes), ordered by s
   - Remove: pheromone math (decay, effective, batch, cleanup, validate)
   - Remove: memory compression, spawn check
   - Inline trivial operations (error summary, activity logging)
+  - **Outcome:** Validated — 372 → 87 lines
 
 - [x] **SIMP-07**: Adopt output-as-state for build results
   - `.planning/phase-N/SUMMARY.md` existence = phase complete
   - State file tracks only: current phase number, colony goal, active signals
   - /ant:continue reads output files to determine completion
-
-## Out of Scope
-
-| Feature | Reason |
-|---------|--------|
-| Bayesian spawn tracking | Not enough data points to be meaningful (need 50+) |
-| Caste sensitivity matrices | Replaced by plain-language priority rules |
-| Half-life pheromone decay | Replaced by TTL |
-| Verbose ASCII output templates | Let LLM format naturally |
-| Per-step state validation | Validate once at command start |
-
-## Preserved Features
-
-Per postmortem Section 7 (What to Preserve):
-
-- Parallel task decomposition (Wave 1 -> Wave 2 pattern)
-- Structured phase output (`.planning/phase-N/` directories)
-- Worker role concept (6 castes)
-- Signal/constraint concept (simplified implementation)
-- Quality gates (watcher review before advancement)
-- Pause/resume capability
-- Phase-based planning
-
-## Success Metrics
-
-| Metric | Current | Target |
-|--------|---------|--------|
-| State files per command | 6 | 1 |
-| Shell utility calls per command | 2-5 | 0-1 |
-| Command file avg lines | ~340 | ~100 |
-| Worker spec total lines | 1,866 | ~200 |
-| Total system lines | ~7,400 | ~1,800 |
-| Framework context overhead | ~70% | ~20% |
+  - **Outcome:** Validated — SUMMARY.md existence = completion
 
 ## Traceability
 
@@ -92,18 +70,28 @@ Per postmortem Section 7 (What to Preserve):
 |-------------|-------|--------|
 | SIMP-01 | Phase 33 | Complete |
 | SIMP-02 | Phase 34 | Complete |
-| SIMP-03 | Phase 36 | Complete |
+| SIMP-03 | Phase 36, 38, 40 | Complete |
 | SIMP-04 | Phase 35 | Complete |
-| SIMP-05 | Phase 34 (build, continue), Phase 37 (remaining) | Complete |
+| SIMP-05 | Phase 34, 37 | Complete |
 | SIMP-06 | Phase 37 | Complete |
 | SIMP-07 | Phase 34 | Complete |
 
 **Coverage:**
 - v5.1 requirements: 7 total
-- Mapped to phases: 7/7
-- Unmapped: 0
+- Shipped: 7/7
+- Adjusted: 0
+- Dropped: 0
 
 ---
-*Requirements defined: 2026-02-06*
-*Traceability updated: 2026-02-06*
-*Source: COLONY_POSTMORTEM.md Sections 5-6*
+
+## Milestone Summary
+
+**Shipped:** 7 of 7 requirements
+**Adjusted:** None
+**Dropped:** None
+
+All requirements derived from the M4L-AnalogWave postmortem were successfully implemented. The postmortem's recommended implementation order (state first, then commands, then infrastructure) was followed exactly.
+
+---
+
+*Archived: 2026-02-06 as part of v5.1 milestone completion*
